--- a/package.json
+++ b/package.json
@@ -6,23 +6,21 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tippyjs/react": "^4.2.6",
     "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tippy.js": "^6.3.7"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.329",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
-    "vite": "^7.0.0"
+    "sass": "^1.89.2",
+    "vite": "^7.0.0",
+    "vite-plugin-css-injected-by-js": "^3.5.2"
   }
 }
