--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,7 +19,7 @@
   },
   "permissions": ["contextMenus", "scripting", "activeTab", "tabs"],
   "background": {
-    "service_worker": "assets/background.js",
+    "service_worker": "scripts/background.js",
     "type": "module"
   },
   "host_permissions": [
@@ -29,7 +29,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["assets/content.js"],
+      "js": ["scripts/content.js"],
       "run_at": "document_idle"
     }
   ]
