--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,9 @@
 {
   "manifest_version": 3,
-  "name": "AI语义翻译",
-  "version": "1.0",
-  "description": "这是一个浏览器右键菜单AI翻译工具，你可以选中网页英文词汇或句子，右键选择 “AI语义翻译” 即可使用OpenAI的顶级翻译功能。",
+  "name": "__MSG_name__",
+  "version": "1.0.1",
+  "description": "__MSG_description__",
+  "default_locale": "zh_CN",
   "action": {
     "default_icon": {
       "16": "icons/icon16.png",
