--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tesseract.js": "^6.0.1",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
